--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18"
   },
